changed gaps , solved BEM problem , added vars

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -2,7 +2,6 @@
   height: 403px;
   width: 200px;
   padding: 13px 14px;
-  margin-bottom: 50px;
   border: 1px solid $card-border;
   border-radius: 5px;
 
@@ -79,7 +78,7 @@
     line-height: 16px;
     text-transform: uppercase;
     text-decoration: none;
-    color: #fff;
+    color: $button-text-color;
 
     transition: color 1s, background-color 1s, border 1s;
     &:hover {
