--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,5 +1,8 @@
 $hover-color: #00acdc;
 $card-border: #f3f3f3;
+$active-color: #00acdc;
+$button-text-color : #fff;
+$nav-text-color : black;
 @mixin space-between {
   display: flex;
   justify-content: space-between;
